fix: address overflow in address book

--- a/packages/core/src/ui/components/WalletAddresses/WalletAddressItem.module.scss
+++ b/packages/core/src/ui/components/WalletAddresses/WalletAddressItem.module.scss
@@ -44,7 +44,6 @@
   align-items: center;
   display: flex;
   gap: size_unit(1);
-  width: auto !important;
   &.small {
     gap: size_unit(2);
 
